crates/otter-vm/tests/compile_fail/value_is_not_send.stderr
error[E0277]: `Rc<[otter_gc::compressed::Gc<UpvalueCellBody>]>` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `Rc<[otter_gc::compressed::Gc<UpvalueCellBody>]>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `Rc<[otter_gc::compressed::Gc<UpvalueCellBody>]>`
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `Rc<num_bigint::bigint::BigInt>` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `Rc<num_bigint::bigint::BigInt>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `Rc<num_bigint::bigint::BigInt>`
note: required because it appears within the type `BigIntValue`
  --> src/bigint/mod.rs
   |
   | pub struct BigIntValue {
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `Rc<SymbolBody>` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `Rc<SymbolBody>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `Rc<SymbolBody>`
note: required because it appears within the type `JsSymbol`
  --> src/symbol.rs
   |
   | pub struct JsSymbol {
   |            ^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `Rc<TemporalPayload>` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `Rc<TemporalPayload>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `Rc<TemporalPayload>`
note: required because it appears within the type `JsTemporal`
  --> src/temporal/payload.rs
   |
   | pub struct JsTemporal {
   |            ^^^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `Rc<IntlPayload>` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `Rc<IntlPayload>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `Rc<IntlPayload>`
note: required because it appears within the type `JsIntl`
  --> src/intl/payload.rs
   |
   | pub struct JsIntl {
   |            ^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `Rc<DataViewBody>` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `Rc<DataViewBody>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `Rc<DataViewBody>`
note: required because it appears within the type `JsDataView`
  --> src/binary/data_view.rs
   |
   | pub struct JsDataView {
   |            ^^^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `Rc<TypedArrayBody>` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `Rc<TypedArrayBody>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `Rc<TypedArrayBody>`
note: required because it appears within the type `JsTypedArray`
  --> src/binary/typed_array.rs
   |
   | pub struct JsTypedArray {
   |            ^^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `Rc<ProxyBody>` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `Rc<ProxyBody>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `Rc<ProxyBody>`
note: required because it appears within the type `JsProxy`
  --> src/proxy.rs
   |
   | pub struct JsProxy {
   |            ^^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const ObjectBody` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const ObjectBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const ObjectBody`
note: required because it appears within the type `PhantomData<*const ObjectBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<ObjectBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const ArrayBody` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const ArrayBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const ArrayBody`
note: required because it appears within the type `PhantomData<*const ArrayBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<ArrayBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const IteratorState` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const IteratorState` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const IteratorState`
note: required because it appears within the type `PhantomData<*const IteratorState>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<IteratorState>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const MapBody` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const MapBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const MapBody`
note: required because it appears within the type `PhantomData<*const MapBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<MapBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const SetBody` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const SetBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const SetBody`
note: required because it appears within the type `PhantomData<*const SetBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<SetBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const WeakMapBody` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const WeakMapBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const WeakMapBody`
note: required because it appears within the type `PhantomData<*const WeakMapBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<WeakMapBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const WeakSetBody` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const WeakSetBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const WeakSetBody`
note: required because it appears within the type `PhantomData<*const WeakSetBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<WeakSetBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const WeakRefBody` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const WeakRefBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const WeakRefBody`
note: required because it appears within the type `PhantomData<*const WeakRefBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<WeakRefBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const FinalizationRegistryBody` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const FinalizationRegistryBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const FinalizationRegistryBody`
note: required because it appears within the type `PhantomData<*const FinalizationRegistryBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<FinalizationRegistryBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `Rc<LocalBody>` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `Rc<LocalBody>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `Rc<LocalBody>`
note: required because it appears within the type `BufferStorage`
  --> src/binary/array_buffer.rs
   |
   | pub enum BufferStorage {
   |          ^^^^^^^^^^^^^
note: required because it appears within the type `JsArrayBuffer`
  --> src/binary/array_buffer.rs
   |
   | pub struct JsArrayBuffer {
   |            ^^^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const BoundFunctionBody` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const BoundFunctionBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const BoundFunctionBody`
note: required because it appears within the type `PhantomData<*const BoundFunctionBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<BoundFunctionBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `otter_vm::BoundFunction`
  --> src/lib.rs
   |
   | pub struct BoundFunction {
   |            ^^^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const NativeFunctionBody` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const NativeFunctionBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const NativeFunctionBody`
note: required because it appears within the type `PhantomData<*const NativeFunctionBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<NativeFunctionBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `otter_vm::NativeFunction`
  --> src/native_function.rs
   |
   | pub struct NativeFunction {
   |            ^^^^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const JsRegExpBody` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const JsRegExpBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const JsRegExpBody`
note: required because it appears within the type `PhantomData<*const JsRegExpBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<JsRegExpBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `JsRegExp`
  --> src/regexp.rs
   |
   | pub struct JsRegExp {
   |            ^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const GeneratorBody` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const GeneratorBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const GeneratorBody`
note: required because it appears within the type `PhantomData<*const GeneratorBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<GeneratorBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `JsGenerator`
  --> src/generator.rs
   |
   | pub struct JsGenerator {
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const ClassConstructorBody` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const ClassConstructorBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const ClassConstructorBody`
note: required because it appears within the type `PhantomData<*const ClassConstructorBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<ClassConstructorBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `otter_vm::ClassConstructor`
  --> src/lib.rs
   |
   | pub struct ClassConstructor {
   |            ^^^^^^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const PurePromiseBody` cannot be sent between threads safely
  --> tests/compile_fail/value_is_not_send.rs:10:17
   |
10 |     assert_send(value);
   |     ----------- ^^^^^ `*const PurePromiseBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `otter_vm::Value`, the trait `Send` is not implemented for `*const PurePromiseBody`
note: required because it appears within the type `PhantomData<*const PurePromiseBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<PurePromiseBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `PurePromise`
  --> src/promise.rs
   |
   | pub struct PurePromise {
   |            ^^^^^^^^^^^
note: required because it appears within the type `promise::PromiseRepr`
  --> src/promise.rs
   |
   | enum PromiseRepr {
   |      ^^^^^^^^^^^
note: required because it appears within the type `JsPromiseHandle`
  --> src/promise.rs
   |
   | pub struct JsPromiseHandle {
   |            ^^^^^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/lib.rs
   |
   | pub enum Value {
   |          ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/value_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`
